--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
 	font-family: helvetica;
 	margin: 0;
+	background: red;
 }
 
 #logo {
@@ -11,7 +12,7 @@ body {
 #container {
 	display: flex;
 	align-items: center;
-	justify-content: center;
+	justify-content: space-between;
 	height: 100vh;
 	flex-direction: column;
 }
